--- a/KMeans_Masculinity.ipynb
+++ b/KMeans_Masculinity.ipynb
@@ -6,7 +6,7 @@
       "name": "KMeans-Masculinity.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPqporD/nDwXhA44TZMcbxg",
+      "authorship_tag": "ABX9TyOebUUu9JYbiNsJ8RTmwKGK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "source": [
         "# KMeans - Masculinity\n",
         "\n",
-        "For this project I analyzed from *FiveThirtyEight* about the way people think about masculinity. It was based on a survey that asks 1189 men different questions in different categories like habits, preferences, daily routines, hobbies, gender, education, sexual orientation, race and age. In that sense, using the KMeans Algorithm I created a classifier that clusters the data of a question and tries to see if they are based on traditional masculine concepts. "
+        "For this project I analyzed data from *FiveThirtyEight* about the way people think about masculinity. It was based on a survey that asks 1189 men different questions in different categories like habits, preferences, daily routines, hobbies, gender, education, sexual orientation, race and age. In that sense, using the KMeans Algorithm I created a classifier that clusters the data of a question and tries to see if they are based on traditional masculine concepts. "
       ]
     },
     {
